# SolidsPy

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.md  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
ANLY_SLNS/BEAM/: beam.py  beam_convergence.py  convergence.aux  convergence.bbl  convergence.blg  convergence.tex  mater.txt  nodes.txt  references.bib
ANLY_SLNS/FLAMANT/: FLAMANT.py  mis_funciones.py
ANLY_SLNS/WEDGE/: analysis.py  mis_funciones.py  nodes.txt  wedge.py
MAIN/: assemutil.py  eles.txt  femutil.py  gaussutil.py  loads.txt  mater.txt  nodes.txt  postprocesor.py  preprocesor.py  solids_ISO.py  solids_ISO_GUI.py  solids_ISO_GUI_sparse.py  solutil.py  tester.py  uelutil.py
MESHES/1000SQUARE_tri/: eles.txt  loads.txt  nodes.txt  square.geo  squareF.msh  squareH.msh  squareV.msh
MESHES/2X2SQUAREL4N/: eles.txt  loads.txt  nodes.txt
MESHES/2X2SQUARELTRI/: Aeles.txt  eles.txt  loads.txt  nodes.txt  screw.geo  squareltr.geo  squareltr.msh  squareltrF.msh  squareltrH.msh  squareltrV.msh
MESHES/2_SPRING_SYM/: eles.txt  loads.txt  mater.txt  nodes.txt
MESHES/ANGLE_BEAM/: angle_beam.geo  angle_beam.msh  angle_beam_input.py  eles.txt  loads.txt  (+4 more)
MESHUTIL/: MESHER Makefile  Makefile  bimaterial.geo  bimaterial.msh  boussiH.msh  boussiV.msh  contour  contour.for  conv5.msh  cunia.msh  dam.msh  eles.txt  estrato.geo  estrato.msh  mesher  mesher.for  meshutil.for  mtxutil.for  nodes.txt  out.txt  ring.geo  ring.msh  ringF.msh  ringH.msh  ringV.msh  tap1.geo  tap1.msh  tap4.geo  tap4.msh  tumesh.py  tunelV.msh  wedgeF.msh  wedgeH.msh  wedgeV.msh  zapata.msh
TEMPLATE/: template.msh  template_input.py
conda-recipe/: meta.yaml
docs/: Makefile  README.md  README.rst  advanced.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  readme.rst  requirements.txt  square_example.md  square_example.rst  tutorial.rst  usage.rst
examples/: bridge_ex.py  load_mesh_example.py  smooth_strains_ex.py  uel_assembly.py
main/: postprocesor.py  solids_ISO_GUI.py
paper/: paper.bib  paper.md
solidspy/: __init__.py  __main__.py  assemutil.py  blochutil.py  femutil.py  gaussutil.py  postprocesor.py  preprocesor.py  solids_GUI.py  solutil.py  uelutil.py
src/: __init__.py  __main__.py  assemutil.py  femutil.py  postprocesor.py  solids_GUI.py  solutil.py  uelutil.py
tests/: test_assemutil.py  test_bloch.py  test_femutil.py  test_gaussutil.py  test_integration.py  test_postprocesor.py  test_preprocesor.py  test_solutil.py  test_uelutil.py
(+289 files in other folders)
